--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,3 +23,4 @@ linter:
   rules:
     depend_on_referenced_packages: false
     use_setters_to_change_properties: false
+    prefer_constructors_over_static_methods: false
