--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: moon_core
 description: Moon Design System headless UI core widgets for Flutter.
 version: 0.0.1
-homepage:
+homepage: ''
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
@@ -11,12 +11,15 @@ dependencies:
   collection: ^1.18.0
   flutter:
     sdk: flutter
-  mix: ^1.0.0
+  mix: ^1.1.0
+  mix_annotations: ^0.1.0
 
 dev_dependencies:
+  build_runner: ^2.4.9
   flutter_test:
     sdk: flutter
   lint: ^2.3.0
+  mix_generator: ^0.1.1
 
 flutter:
   uses-material-design: true
