--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,16 @@ dependencies:
   collection: ^1.18.0
   flutter:
     sdk: flutter
-  mix: ^1.1.3
-  mix_annotations: ^0.2.0
+  flutter_animate: ^4.5.0
+  mix: ^1.4.0
+  mix_annotations: ^0.2.1
 
 dev_dependencies:
   build_runner: ^2.4.9
   flutter_test:
     sdk: flutter
   lint: ^2.3.0
-  mix_generator: ^0.2.0
+  mix_generator: ^0.2.2
 
 flutter:
   uses-material-design: true
