Code generate DefaultTextStyle and IconTheme wrappers

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.0
-  mix: ^1.4.0
+  mix: ^1.4.3
   mix_annotations: ^0.2.1
 
 dev_dependencies:
@@ -20,7 +20,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^2.3.0
-  mix_generator: ^0.2.2
+  mix_generator: ^0.2.2+1
+  mix_lint: ^0.1.1
 
 flutter:
   uses-material-design: true
