--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -24,3 +24,4 @@ linter:
     depend_on_referenced_packages: false
     use_setters_to_change_properties: false
     prefer_constructors_over_static_methods: false
+    avoid_classes_with_only_static_members: false
