--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.0
-  mix: ^1.4.3
-  mix_annotations: ^0.2.1
+  mix: ^1.5.0
+  mix_annotations: ^0.3.0
 
 dev_dependencies:
   build_runner: ^2.4.9
   flutter_test:
     sdk: flutter
   lint: ^2.3.0
-  mix_generator: ^0.2.2+1
+  mix_generator: ^0.3.1
   mix_lint: ^0.1.1
 
 flutter:
